--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.myBorder {
+  border: 1px solid red;
+}
+.menuHover {
+  cursor: pointer;
+}
+.menuHover:hover .menuIcon {
+  color: #e21717 !important;
+}
+.menuHover:hover .menuText {
+  color: #fff !important;
+}
+.activeItem {
+  height: 100%;
+  width: 20px;
+  border: 1px solid red;
+  background-color: red;
 }
