--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ code {
   background-color: #00000080;
 }
 .movieHoverContainer:hover .movieCategory {
-  color: #1494d6;
+  color: #e21717;
 }
 .movieDirector {
   display: none;
@@ -72,4 +72,15 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.authBackground {
+  background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.5) 23%,
+      rgba(255, 255, 255, 0) 100%
+    ),
+    url("https://assets.nflxext.com/ffe/siteui/vlv3/757ab38f-5d08-40bc-b3eb-eaba63ed8203/93c34f94-56c8-40a7-8b2e-b4aac6427977/GB-en-20210125-popsignuptwoweeks-perspective_alpha_website_medium.jpg")
+      center no-repeat;
+  background-size: cover;
 }
